@@ -27,7 +27,7 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .\" new: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .in \\n[rst2man-indent\\n[rst2man-indent-level]]u
 ..
-.TH "RST2MAN" 1 "2006-10-22" "0.1" "text processing"
+.TH "RST2MAN" "1" "2006-10-22" "0.1" "text processing"
 .SH NAME
 rst2man \- generate unix manpages from reStructured text
 .\" TODO: authors and author with name <email>
