@@ -73,7 +73,7 @@ totest['blank'] = [
         ["",
         r""".\" Man page generated from reStructuredText.
 .
-""" + indend_macros + """.TH ""  "" ""
+""" + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 .\\" Generated by docutils manpage writer.
@@ -88,7 +88,7 @@ totest['blank'] = [
 """,
         r""".\" Man page generated from reStructuredText.
 .
-""" + indend_macros + """.TH "HELLO, WORLD."  "" ""
+""" + indend_macros + """.TH "HELLO, WORLD." "" "" ""
 .SH NAME
 Hello, world. \\- \n\
 .sp
@@ -165,7 +165,7 @@ and . in a line and at line start
 """,
         r""".\" Man page generated from reStructuredText.
 .
-""" + indend_macros + r""".TH "SIMPLE" 1 "2009-08-05" "0.1" "text processing"
+""" + indend_macros + r""".TH "SIMPLE" "1" "2009-08-05" "0.1" "text processing"
 .SH NAME
 simple \- The way to go
 .SH SYNOPSIS
@@ -246,7 +246,7 @@ totest['table'] = [
 \'\\" t
 .\\" Man page generated from reStructuredText.
 .
-''' + indend_macros + '''.TH ""  "" ""
+''' + indend_macros + '''.TH "" "" "" ""
 .SH NAME
  \\- \n\
 .INDENT 0.0
@@ -301,7 +301,7 @@ $
         """\
 .\\" Man page generated from reStructuredText.
 .
-""" + indend_macros + """.TH ""  "" ""
+""" + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 optin group with dot as group item
@@ -358,7 +358,7 @@ Section
 '''\
 .\\" Man page generated from reStructuredText.
 .
-''' + indend_macros + '''.TH "DEFINITION LIST TEST"  "" ""
+''' + indend_macros + '''.TH "DEFINITION LIST TEST" "" "" ""
 .SH NAME
 Definition List Test \\- \n\
 ''' + '''.SS Abstract
@@ -387,7 +387,7 @@ totest['cmdlineoptions'] = [
 """,
         r""".\" Man page generated from reStructuredText.
 .
-""" + indend_macros + """.TH ""  "" ""
+""" + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 .INDENT 0.0
@@ -416,7 +416,7 @@ totest['citation'] = [
 """,
         r""".\" Man page generated from reStructuredText.
 .
-""" + indend_macros + """.TH ""  "" ""
+""" + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 .IP [docutils] 5
@@ -435,7 +435,7 @@ totest['rubric'] = [
 """,
         r""".\" Man page generated from reStructuredText.
 .
-""" + indend_macros + """.TH ""  "" ""
+""" + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 some rubric
@@ -458,7 +458,7 @@ They are "escaped" anywhere.
 """,
         r""".\" Man page generated from reStructuredText.
 .
-""" + indend_macros + """.TH ""  "" ""
+""" + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 .INDENT 0.0
@@ -491,7 +491,7 @@ Test title, docinfo to man page header.
 """,
         r""".\" Man page generated from reStructuredText.
 .
-""" + indend_macros + r""".TH "PAGE TITLE" 3 "3/Nov/2022" "0.0" "the books"
+""" + indend_macros + r""".TH "PAGE TITLE" "3" "3/Nov/2022" "0.0" "the books"
 .SH NAME
 page title \- in short
 .sp
